<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_background">

        <include
            android:id="@+id/toolbarView"
            layout="@layout/common_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/character_filter_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarView" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:autofillHints="name"
            android:drawableEnd="@drawable/ic_search"
            android:hint="@string/character_filter_name_hint"
            android:inputType="textFilter"
            android:paddingHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/character_filter_status"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/statusChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            app:chipSpacingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStatus"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/aliveStatusChip"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checkable="true"
                android:text="@string/character_status_alive"
                android:textColor="@color/white"
                app:checkedIcon="@drawable/ic_check"
                app:chipBackgroundColor="@color/character_status_alive" />

            <com.google.android.material.chip.Chip
                android:id="@+id/deadStatusChip"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checkable="true"
                android:text="@string/character_status_dead"
                android:textColor="@color/white"
                app:checkedIcon="@drawable/ic_check"
                app:chipBackgroundColor="@color/character_status_dead" />

            <com.google.android.material.chip.Chip
                android:id="@+id/unknownStatusChip"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checkable="true"
                android:text="@string/character_status_unknown"
                android:textColor="@color/white"
                app:checkedIcon="@drawable/ic_check"
                app:chipBackgroundColor="@color/character_status_unknown" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.App.Button"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/character_filter_submit_button"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>